# paste-library

./: .gitignore  .npmrc  AGENTS.md  ANDROID_LAN_SYNC_DEV_PLAN.md  ANDROID_LAN_SYNC_MVP.md  ANDROID_LAN_SYNC_SPEC.md  DEVELOPMENT_PLAN.md  LAN_SYNC.md  LAN_SYNC_DESKTOP.md  README.md  SPECIFICATION.md  agent.md  mock_lan_peer.py  package.json  pnpm-lock.yaml  tauri-plugin-clipboard-x.md  tsconfig.json  vite.config.ts  待开发.md  测试流程.md  现有Bug.md
.cursor/plans/: 前端代码重构计划_1c889daa.plan.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: release.yml
android-lan-sync/: .gitignore  README.md  settings.gradle.kts
android-lan-sync/app/: build.gradle.kts
docs/: 01_OVERVIEW.md  02_PRD.md  03_ARCHITECTURE.md  04_UI_SPEC.md  05_DATA_MODEL.md  06_IMPLEMENTATION.md  FEATURE_IMPLEMENTATION_CHECKLIST.md  FEATURE_SPEC.md  IMPLEMENTATION_PLAN.md  LAN_SYNC_PLAN.md  SETTINGS_IMPLEMENTATION.md  TECH_DESIGN.md  UI_DESIGN.md
src/: App.vue  ClipboardView.vue  main.ts
src-tauri/: Cargo.toml  clipboard.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: AGENTS.md  clipboard.rs  fuzzy_search.rs  lib.rs  lib.rs.backup  main.rs  models.rs  shortcut_manager.rs  storage.rs  sync_service.rs  tray_manager.rs  window_manager.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/sync/: connection.rs  crypto.rs  discovery.rs  mod.rs  pairing.rs  protocol.rs  sync_manager.rs
src/components/: AGENTS.md  ClipboardItem.vue  ClipboardList.vue  ContextMenu.vue  DragHandle.vue  DrawerEditor.vue  PasteQueuePanel.vue  SettingsPanel.vue  SmartSearch.vue  TagManager.vue
src/components/clipboard/: ClipboardList copy.vue  ClipboardList.vue  DeleteConfirmDialog.vue  EmptyState.vue  TabBar.vue
src/components/drawer/: ExtractedInfoPanel.vue  FilePreview.vue  ImagePreview.vue  TextPreview.vue
src/components/settings/: SettingsPanel.vue
src/composables/: AGENTS.md  useClipboard.ts  useClipboardList.ts  useContentType.ts  useFileOperations.ts  useImageLoader.ts  useKeyboardNavigation.ts  useLanSync.ts  useLanSyncClipboardBridge.ts  usePasteQueue.ts  usePinMode.ts  usePinnedSearches.ts  useScrollHandler.ts  useSearch.ts  useSettings.ts  useSmartSearch.ts  useWindow.ts
src/types/: components.ts  index.ts  vue-virtual-scroller.d.ts  window.ts
src/utils/: contentHelpers.ts  formatters.ts  htmlUtils.ts  tagColors.ts
temp/ui-design-optimization/app/: page.tsx
头脑风暴/: ITEM_REFACTOR_BRAINSTORM.md
(+19 files in other folders)
