[package]
name = "paste-library"
version = "26.2.28"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "paste_library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-x = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-prevent-default = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "time"] }
pinyin = "0.10"
enigo = "0.2"
mdns-sd = "0.12"
uuid = { version = "1", features = ["v4"] }
whoami = "1"
chacha20poly1305 = "0.10"
lazy_static = "1.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
